fix: totally remove horizontal overflow

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -9,6 +9,11 @@
   scroll-margin-top: 77px; /* stylelint-disable-line property-no-unknown */
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: Rubik, sans-serif;
   font-size: 16px;
@@ -16,7 +21,6 @@ body {
   background: $white;
   color: $text-main;
   position: relative;
-  overflow-x: hidden;
 
   @include media-breakpoint-down(md) {
     font-size: 13px;
